fix PostConstruct